2010-12-14  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam Roben.

        Move NetscapePluginModule.{cpp|h} to Shared/Plugins/Netscape
        https://bugs.webkit.org/show_bug.cgi?id=51052

        * Shared/Plugins/Netscape/NetscapePluginModule.cpp: Renamed from WebKit2/WebProcess/Plugins/Netscape/NetscapePluginModule.cpp.
        * Shared/Plugins/Netscape/NetscapePluginModule.h: Renamed from WebKit2/WebProcess/Plugins/Netscape/NetscapePluginModule.h.
        * WebKit2.pro:
        * WebKit2.xcodeproj/project.pbxproj:
        * win/WebKit2.vcproj:
        * win/WebKit2Common.vsprops:

2010-12-14  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Handle complex text input for plug-ins
        https://bugs.webkit.org/show_bug.cgi?id=51047

        * PluginProcess/PluginControllerProxy.cpp:
        (WebKit::PluginControllerProxy::sendComplexTextInput):
        Pass along the text input to the plug-in.

        * PluginProcess/PluginControllerProxy.messages.in:
        Add SendComplexTextInput message.

        * UIProcess/API/mac/WKTextInputWindowController.h: Added.
        * UIProcess/API/mac/WKTextInputWindowController.mm: Added.
        Add text input window controller, mostly copied from WebKit1.
        
        * UIProcess/API/mac/WKView.mm:
        (-[WKView keyDown:]):
        If needed, pass along the event to the text input window controller.

        (-[WKView inputContext]):
        Return the input context of the text input window controller.

        (-[WKView _setComplexTextInputEnabled:pluginComplexTextInputIdentifier:]):
        Notify the input window controller that the input source changed.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::sendComplexTextInputToPlugin):
        Send the complex text input to the web process.

        * WebKit2.xcodeproj/project.pbxproj:
        Add new files.

        * WebProcess/Plugins/Netscape/mac/NetscapePluginMac.mm: