@@ -1,5 +1,17 @@
 2010-12-14  Anders Carlsson  <andersca@apple.com>
 
+        Reviewed by John Sullivan.
+
+        Switch name and description order when fetching Carbon plug-in info
+        https://bugs.webkit.org/show_bug.cgi?id=46211
+
+        The plug-in description comes before the name in the Carbon string list resource.
+
+        * UIProcess/Plugins/mac/PluginInfoStoreMac.mm:
+        (WebKit::getPluginInfoFromCarbonResources):
+
+2010-12-14  Anders Carlsson  <andersca@apple.com>
+
         Reviewed by Adam Roben.
 
         Move NetscapePluginModule.{cpp|h} to Shared/Plugins/Netscape
